
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://forum.darkbot.org
    *******************************************************

Darkbot 8rc2: December 02, 2006
	- Fixed Makefile.am file to produce DOS 8.3 file format
	  compliant config.h pre-file, and the copyright thingo	
          in the same file.

Darkbot 8rc2: October 11, 2006
	- Fixed some divide by zero errors.
	- Cleaned up tho logging.
	- Cleaned up tho output of the build system.
	- Cleaned up the parameter names.
	- Cleaned up lsome help text.
	- Script for building minimal darkbot.
	- Disabled more channel code.
	- Started documenting what darkbot works on.

Darkbot 8rc2: June 11, 2006
	- Added docs/SETUP.

Darkbot 8rc2: May 31, 2006
	- A busy month.
	- Completed the autofoo.
	- Added compat directory full of replacement functions for
	  when autofoo decides that the users OS is missing stuff.
	- Added a testing mode for developers.
	- Cleaned up most OS dependant things so that they now work 
	  everywhere.
	- Converted some defines.h things into ./configure --enable-X
	  --with-X=Y things.
	- Added !set foo=bar infrastructure and command.  The contents
	  of setup.ini is now under the control of generic, array based
	  code.  To add things to setup.ini, just add them to the array.
	- Added setup.ini parameters to the internal help system.
	- Moved the rest of defines.h to setup.ini.
	- General clean up and lots of minor things that get fixed in 
	  passing.
	- Added docs/HACKING.
	- Re arranged some files.
	- New building scripts.
	- Darkbot and convertdb are much cleverer about finding the data
	  files.
	- Cleaned up vars.c and vars.h.
	- Have the help system deal with the command character as needed.

Darkbot 8rc2: May 04, 2006
	- Cleaned generated files out of cvs and updated .cvsignore 
	  files to match.

Darkbot 8rc2: Apr 21, 2006
	- Added most of the help command summaries.
