@@ -166,7 +166,6 @@ char NO_ENTRY[STRING_SHORT] = "I was unable to find entry:";
 char NO_TOPIC[STRING_SHORT] = "Sorry, I don't have any entry for";	/* ... */
 char TRY_FIND[STRING_SHORT] = "What am I trying to find";
 char WHUT[STRING_SHORT] = "hmmm?";
-bool RANDOM_WHUT = true;
 char DUNNO_Q[STRING_SHORT] = "*shrug*";
 bool RANDOM_DUNNO = true;
 
@@ -338,7 +337,9 @@ struct setup_parameter parameters[] =
     {ST_BOOLEAN, 3, sizeof(VOICE_USERS_ON_JOIN),    {"VOICE_ON_JOIN",          NULL, NULL, NULL, NULL}, "voice users on join",                     &VOICE_USERS_ON_JOIN,  NULL},
 #endif
     {ST_STRING,  3, sizeof(WHUT),                   {"WHUT_TEXT",              NULL, NULL, NULL, NULL}, "no text complaint",                       WHUT,                  NULL},
+#ifdef ENABLE_RANDWHUT
     {ST_BOOLEAN, 3, sizeof(RANDOM_WHUT),            {"WHUT_RANDOM_TEXT",       NULL, NULL, NULL, NULL}, "random no text complaint",                &RANDOM_WHUT,          NULL},
+#endif
 // Cant find CANT_FIND.  B-)
 //    {ST_STRING,  3, sizeof(CANT_FIND),              {"CANT_FIND",              NULL, NULL, NULL, NULL}, "can't find search complaint",             CANT_FIND,             NULL},
     {ST_STRING,  4, 0, {NULL, NULL, NULL, NULL, NULL}, NULL, NULL, NULL}
