@@ -4,7 +4,10 @@
     Support Forum: http://forum.darkbot.org
     *******************************************************
 
-Darkbot 8rc2: December 02, 2006
+Darkbot 8rc2: December 04, 2006
+	- Fixed some variable checking that was checking for integers
+	  instead of bool values (random whut is fixed by this, flood 
+          kick)
 	- Fixed Makefile.am file to produce DOS 8.3 file format
 	  compliant config.h pre-file, and the copyright thingo	
           in the same file.
